# loguru-config

./: LICENSE  MODERNIZATION_PLAN.md  README.md  pyproject.toml
examples/json/: async.json  structured.json
examples/json5/: basic.json5  rotating.json5
examples/toml/: async.toml  basic.toml  rotating.toml  structured.toml
examples/yaml/: async.yaml  basic.yaml  rotating.yaml  structured.yaml
src/loguru_config/: cli.py  example_stubs.py
src/loguru_config/utils/: loaders.py
tests/: test_cli.py
